[package]
name = "linal"
description = "tiny linear algebra library without dependencies"
version = "0.2.3"
authors = ["Vova Abdrakhmanov <369565@gmail.com>", "Alexey Golubev <dr.freecx@gmail.com>"]
repository = "https://github.com/pinecrew/linal"
keywords = ["vectors", "linear", "algebra"]
license = "BSD-3-Clause"
exclude = ["scripts/", "examples/"]

[lib]
name = "linal"

[[example]]
name = "vector2"

[[example]]
name = "vector3"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

